--- a/expt-19/README
+++ b/expt-19/README
@@ -2,5 +2,6 @@
 25 May 2021: expt-19
 --------------------
 Now that shape code appears to work, resume test runs.
-Resuing the same corus from expt-18, which is the same corpus
-from ... much earlier ... !?  Details in the diary.
+Reusing the same corpus from expt-16, which according to the
+diary is the first corpus with a good left-wall. See expt-16
+in the diary.
